Pequenas correções nos relatórios e no código.

--- a/reports/trab1-Sugestões.html
+++ b/reports/trab1-Sugestões.html
@@ -14614,7 +14614,7 @@ O dataframe utilizado nesta Análise Exploratória de Dados (EAD), denominado <s
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[37]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[50]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
@@ -14644,7 +14644,7 @@ O dataframe utilizado nesta Análise Exploratória de Dados (EAD), denominado <s
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[38]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[51]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">file_path</span> <span class="o">=</span> <span class="s1">'~/Library/CloudStorage/OneDrive-Pessoal/Trabalhos 2024/Grupo-2/data/hsb2f.csv'</span> <span class="c1"># Observação para uso no meu ambiente</span>
@@ -14672,7 +14672,7 @@ O dataframe utilizado nesta Análise Exploratória de Dados (EAD), denominado <s
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[39]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[52]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">autopct_format</span><span class="p">(</span><span class="n">values</span><span class="p">):</span>
@@ -14764,7 +14764,7 @@ As variáveis qualitativas ou categóricas podem ser</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[40]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[53]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_categorical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'genero'</span><span class="p">,</span> <span class="s1">'Figura 1. Distribuição de Gênero'</span><span class="p">)</span>
@@ -14820,7 +14820,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[41]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[54]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_categorical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'raca'</span><span class="p">,</span> <span class="s1">'Figura 2. Distribuição de Raça'</span><span class="p">)</span>
@@ -14876,7 +14876,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[42]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[55]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_categorical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'clasocial'</span><span class="p">,</span> <span class="s1">'Figura 3. Distribuição de Classe Social'</span><span class="p">)</span>
@@ -14932,7 +14932,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[43]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[56]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_categorical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'tipescola'</span><span class="p">,</span> <span class="s1">'Figura 4. Distribuição do Tipo de Escola'</span><span class="p">)</span>
@@ -14988,7 +14988,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[44]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[57]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_categorical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'programa'</span><span class="p">,</span> <span class="s1">'Figura 5. Distribuição dos Currículos'</span><span class="p">)</span>
@@ -15057,7 +15057,7 @@ Neste trabalho as variáveis <em>ler</em>, <em>escrever</em>,<em>matemática</em
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[45]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[58]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span> <span class="n">plot_numerical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'ler'</span><span class="p">,</span> <span class="s1">'Figura 6. Distribuição das Notas em Leitura'</span><span class="p">)</span>
@@ -15113,7 +15113,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[46]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[59]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_numerical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'escrever'</span><span class="p">,</span> <span class="s1">'Figura 7. Distribuição das Notas em Escrita'</span><span class="p">)</span>
@@ -15169,7 +15169,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[47]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[60]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_numerical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'matematica'</span><span class="p">,</span> <span class="s1">'Figura 8. Distribuição das Notas em Matemática'</span><span class="p">)</span>
@@ -15225,7 +15225,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[48]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[61]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_numerical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'ciencias'</span><span class="p">,</span> <span class="s1">'Figura 9. Distribuição das Notas em Ciências'</span><span class="p">)</span>
@@ -15281,7 +15281,7 @@ class="
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[49]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[62]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plot_numerical</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="s1">'estsociais'</span><span class="p">,</span> <span class="s1">'Figura 10. Distribuição das Notas em Estudos Sociais'</span><span class="p">)</span>
@@ -15320,6 +15320,31 @@ class="
 
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="6.-An%C3%A1lise-de-Correla%C3%A7%C3%A3o-e-Causalidade">6. An&#225;lise de Correla&#231;&#227;o e Causalidade<a class="anchor-link" href="#6.-An%C3%A1lise-de-Correla%C3%A7%C3%A3o-e-Causalidade">&#182;</a></h2><p>A análise de correlação na análise exploratória auxilia o entendimento de como uma variável pode <em>prever</em> ou estar <em>associada</em> a outra. Mais especificamente, a correlação mostra a direção e a força dessa relação. 
+As correlações podem ser positivas, negativas ou inexistentes. À medida que uma variável aumenta, a outra também tende a aumentar.
+Em resumo, a correlação é fundamental em análises de dados pois permite identificar relações entre variáveis e, desta forma, compreender como as variáveis interagem pode ajudar a construir modelos preditivos mais precisos.</p>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="7.-Considera%C3%A7%C3%B5es-finais">7. Considera&#231;&#245;es finais<a class="anchor-link" href="#7.-Considera%C3%A7%C3%B5es-finais">&#182;</a></h2>
+</div>
+</div>
+</div>
 </div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
